Talend test project enhanced More component config added

--- a/src/main/resources/components-sqlparser.properties
+++ b/src/main/resources/components-sqlparser.properties
@@ -17,3 +17,23 @@ tExasolRow.QUERY=QUERY
 tOracleInput.QUERY=QUERY
 tOracleRow.QUERY=QUERY
 tSAPHybrisQueryToImpexCSV.QUERY=QUERY
+
+tMysqlInput.SOURCE_CONN=CONNECTION
+tMysqlRow.SOURCE_CONN=CONNECTION
+tMssqlInput.SOURCE_CONN=CONNECTION
+tMssqlRow.SOURCE_CONN=CONNECTION
+tPostgresqlInput.SOURCE_CONN=CONNECTION
+tPostgresqlRow.SOURCE_CONN=CONNECTION
+tDBInput.SOURCE_CONN=CONNECTION
+tDBRow.SOURCE_CONN=CONNECTION
+tMysqlTableTransfer.SOURCE_CONN=CONNECTION
+tPostgresqlTableTransfer.SOURCE_CONN=CONNECTION
+tOracleTableTransfer.SOURCE_CONN=CONNECTION
+tExasolTableTransfer.SOURCE_CONN=CONNECTION
+tDB2Input.SOURCE_CONN=CONNECTION
+tDB2Row.SOURCE_CONN=CONNECTION
+tExasolInput.SOURCE_CONN=CONNECTION
+tExasolRow.SOURCE_CONN=CONNECTION
+tOracleInput.SOURCE_CONN=CONNECTION
+tOracleRow.SOURCE_CONN=CONNECTION
+tSAPHybrisQueryToImpexCSV.SOURCE_CONN=CONNECTION
