--- a/src/main/resources/components-tableinput.properties
+++ b/src/main/resources/components-tableinput.properties
@@ -1,6 +1,10 @@
 tMysqlTableTransfer.SOURCE_TABLE=SOURCE_TABLE
+tMysqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
 tPostgresqlTableTransfer.SOURCE_TABLE=SOURCE_TABLE
 tExasolTableTransfer.SOURCE_TABLE=SOURCE_TABLE
+tPostgresqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
+tExasolTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
 tSAPRFCTableInput.SOURCE_TABLE=TABLE
+tSAPRFCTableInput.SOURCE_CONN=CONNECTION
 
 
