--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -1,5 +1,7 @@
 tMysqlConnection.DBNAME=DBNAME
 tMysqlConnection.HOST=HOST
+tDBConnection.DBNAME=DBNAME
+tDBConnection.HOST=HOST
 tPostgresqlConnection.SCHEMA=SCHEMA_DB
 tPostgresqlConnection.DBNAME=DBNAME
 tPostgresqlConnection.HOST=HOST
@@ -37,10 +39,12 @@ tPostgresqlInput.SOURCE_CONN=CONNECTION
 tPostgresqlRow.SOURCE_CONN=CONNECTION
 tDBInput.SOURCE_CONN=CONNECTION
 tDBRow.SOURCE_CONN=CONNECTION
-tMysqlTableTransfer.SOURCE_CONN=CONNECTION
-tPostgresqlTableTransfer.SOURCE_CONN=CONNECTION
-tOracleTableTransfer.SOURCE_CONN=CONNECTION
-tExasolTableTransfer.SOURCE_CONN=CONNECTION
+
+tMysqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
+tPostgresqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
+tOracleTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
+tExasolTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
+
 tDB2Input.SOURCE_CONN=CONNECTION
 tDB2Row.SOURCE_CONN=CONNECTION
 tExasolInput.SOURCE_CONN=CONNECTION
@@ -50,11 +54,8 @@ tOracleRow.SOURCE_CONN=CONNECTION
 tSAPHybrisQueryToImpexCSV.SOURCE_CONN=CONNECTION
 
 tMysqlTableTransfer.SOURCE_TABLE=SOURCE_TABLE
-tMysqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
 tPostgresqlTableTransfer.SOURCE_TABLE=SOURCE_TABLE
 tExasolTableTransfer.SOURCE_TABLE=SOURCE_TABLE
-tPostgresqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
-tExasolTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
 tSAPRFCTableInput.SOURCE_TABLE=TABLE
 tSAPRFCTableInput.SOURCE_CONN=CONNECTION
 
@@ -75,14 +76,23 @@ tMysqlOutput.TARGET_CONN=CONNECTION
 tMssqlOutput.TARGET_CONN=CONNECTION
 tPostgresqlOutput.TARGET_CONN=CONNECTION
 tDBOutput.TARGET_CONN=CONNECTION
-tMysqlTableTransfer.TARGET_CONN=CONNECTIONE
-tPostgresqlTableTransfer.TARGET_CONN=CONNECTION
-tOracleTableTransfer.TARGET_CONN=CONNECTION
-tExasolTableTransfer.TARGET_CONN=CONNECTION
+
+tMysqlTableTransfer.TARGET_CONN=CONNECTION_TARGET
+tPostgresqlTableTransfer.TARGET_CONN=CONNECTION_TARGET
+tOracleTableTransfer.TARGET_CONN=CONNECTION_TARGET
+tExasolTableTransfer.TARGET_CONN=CONNECTION_TARGET
+
+tMysqlTableTransfer.USE_ALWAYS_CONN=true
+tPostgresqlTableTransfer.USE_ALWAYS_CONN=true
+tOracleTableTransfer.USE_ALWAYS_CONN=true
+tExasolTableTransfer.USE_ALWAYS_CONN=true
+
 tDB2Output.TARGET_CONN=CONNECTION
 tExasolOutput.TARGET_CONN=CONNECTION
 tOracleOutput.TARGET_CONN=CONNECTION
 tOracleMergeELT.TARGET_CONN=CONNECTION
+
+tCreateTable.TARGET_CONN=CONNECTION
 
 
 
