--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -1,101 +1,119 @@
-tMysqlConnection.DBNAME=DBNAME
-tMysqlConnection.HOST=HOST
-tDBConnection.DBNAME=DBNAME
-tDBConnection.HOST=HOST
-tPostgresqlConnection.SCHEMA=SCHEMA_DB
-tPostgresqlConnection.DBNAME=DBNAME
-tPostgresqlConnection.HOST=HOST
-tMssqlConnection.SCHEMA=SCHEMA_DB
-tMssqlConnection.DBNAME=DBNAME
-tMssqlConnection.HOST=HOST
-tSAPRFCConnection.HOST=HOSTNAME
-tSAPRFCConnection.SCHEMA=GROUPNAME
-
-tMysqlInput.QUERY=QUERY
-tMysqlRow.QUERY=QUERY
-tMssqlInput.QUERY=QUERY
-tMssqlRow.QUERY=QUERY
-tPostgresqlInput.QUERY=QUERY
-tPostgresqlRow.QUERY=QUERY
-tDBInput.QUERY=QUERY
-tDBRow.QUERY=QUERY
-tMysqlTableTransfer.QUERY=SOURCE_QUERY
-tPostgresqlTableTransfer.QUERY=SOURCE_QUERY
-tOracleTableTransfer.QUERY=SOURCE_QUERY
-tExasolTableTransfer.QUERY=SOURCE_QUERY
-tDB2Input.QUERY=QUERY
-tDB2Row.QUERY=QUERY
-tExasolInput.QUERY=QUERY
-tExasolRow.QUERY=QUERY
-tOracleInput.QUERY=QUERY
-tOracleRow.QUERY=QUERY
-tSAPHybrisQueryToImpexCSV.QUERY=QUERY
-
-tMysqlInput.SOURCE_CONN=CONNECTION
-tMysqlRow.SOURCE_CONN=CONNECTION
-tMssqlInput.SOURCE_CONN=CONNECTION
-tMssqlRow.SOURCE_CONN=CONNECTION
-tPostgresqlInput.SOURCE_CONN=CONNECTION
-tPostgresqlRow.SOURCE_CONN=CONNECTION
-tDBInput.SOURCE_CONN=CONNECTION
-tDBRow.SOURCE_CONN=CONNECTION
-
-tMysqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
-tPostgresqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
-tOracleTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
-tExasolTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
-
-tDB2Input.SOURCE_CONN=CONNECTION
-tDB2Row.SOURCE_CONN=CONNECTION
-tExasolInput.SOURCE_CONN=CONNECTION
-tExasolRow.SOURCE_CONN=CONNECTION
-tOracleInput.SOURCE_CONN=CONNECTION
-tOracleRow.SOURCE_CONN=CONNECTION
-tSAPHybrisQueryToImpexCSV.SOURCE_CONN=CONNECTION
-
-tMysqlTableTransfer.SOURCE_TABLE=SOURCE_TABLE
-tPostgresqlTableTransfer.SOURCE_TABLE=SOURCE_TABLE
-tExasolTableTransfer.SOURCE_TABLE=SOURCE_TABLE
-tSAPRFCTableInput.SOURCE_TABLE=TABLE
-tSAPRFCTableInput.SOURCE_CONN=CONNECTION
-
-tMysqlOutput.TARGET_TABLE=TABLE
-tMssqlOutput.TARGET_TABLE=TABLE
-tPostgresqlOutput.TARGET_TABLE=TABLE
-tDBOutput.TARGET_TABLE=TABLE
-tMysqlTableTransfer.TARGET_TABLE=TARGET_TABLE
-tPostgresqlTableTransfer.TARGET_TABLE=TARGET_TABLE
-tOracleTableTransfer.TARGET_TABLE=TARGET_TABLE
-tExasolTableTransfer.TARGET_TABLE=TARGET_TABLE
-tDB2Output.TARGET_TABLE=TABLE
-tExasolOutput.TARGET_TABLE=TABLE
-tOracleOutput.TARGET_TABLE=TABLE
-tOracleMergeELT.TARGET_TABLE=TARGET_TABLE
-
-tMysqlOutput.TARGET_CONN=CONNECTION
-tMssqlOutput.TARGET_CONN=CONNECTION
-tPostgresqlOutput.TARGET_CONN=CONNECTION
-tDBOutput.TARGET_CONN=CONNECTION
-
-tMysqlTableTransfer.TARGET_CONN=CONNECTION_TARGET
-tPostgresqlTableTransfer.TARGET_CONN=CONNECTION_TARGET
-tOracleTableTransfer.TARGET_CONN=CONNECTION_TARGET
-tExasolTableTransfer.TARGET_CONN=CONNECTION_TARGET
-
-tMysqlTableTransfer.USE_ALWAYS_CONN=true
-tPostgresqlTableTransfer.USE_ALWAYS_CONN=true
-tOracleTableTransfer.USE_ALWAYS_CONN=true
-tExasolTableTransfer.USE_ALWAYS_CONN=true
-
-tDB2Output.TARGET_CONN=CONNECTION
-tExasolOutput.TARGET_CONN=CONNECTION
-tOracleOutput.TARGET_CONN=CONNECTION
-tOracleMergeELT.TARGET_CONN=CONNECTION
-
 tCreateTable.TARGET_CONN=CONNECTION
 
+tDB2Input.QUERY=QUERY
+tDB2Input.SOURCE_CONN=CONNECTION
 
+tDB2Output.TARGET_CONN=CONNECTION
+tDB2Output.TARGET_TABLE=TABLE
 
+tDB2Row.QUERY=QUERY
+tDB2Row.SOURCE_CONN=CONNECTION
 
+tDBConnection.DBNAME=DBNAME
+tDBConnection.HOST=HOST
 
+tDBInput.QUERY=QUERY
+tDBInput.SOURCE_CONN=CONNECTION
 
+tDBOutput.TARGET_CONN=CONNECTION
+tDBOutput.TARGET_TABLE=TABLE
+
+tDBRow.QUERY=QUERY
+tDBRow.SOURCE_CONN=CONNECTION
+
+tExasolInput.QUERY=QUERY
+tExasolInput.SOURCE_CONN=CONNECTION
+tExasolOutput.TARGET_CONN=CONNECTION
+tExasolOutput.TARGET_TABLE=TABLE
+
+tExasolRow.QUERY=QUERY
+tExasolRow.SOURCE_CONN=CONNECTION
+
+tExasolTableTransfer.QUERY=SOURCE_QUERY
+tExasolTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
+tExasolTableTransfer.SOURCE_TABLE=SOURCE_TABLE
+tExasolTableTransfer.TARGET_CONN=CONNECTION_TARGET
+tExasolTableTransfer.TARGET_TABLE=TARGET_TABLE
+tExasolTableTransfer.USE_ALWAYS_CONN=true
+
+tMssqlConnection.DBNAME=DBNAME
+tMssqlConnection.HOST=HOST
+tMssqlConnection.SCHEMA=SCHEMA_DB
+
+tMssqlInput.QUERY=QUERY
+tMssqlInput.SOURCE_CONN=CONNECTION
+
+tMssqlOutput.TARGET_CONN=CONNECTION
+tMssqlOutput.TARGET_TABLE=TABLE
+
+tMssqlRow.QUERY=QUERY
+tMssqlRow.SOURCE_CONN=CONNECTION
+
+tMysqlConnection.DBNAME=DBNAME
+tMysqlConnection.HOST=HOST
+
+tMysqlInput.QUERY=QUERY
+tMysqlInput.SOURCE_CONN=CONNECTION
+
+tMysqlOutput.TARGET_CONN=CONNECTION
+tMysqlOutput.TARGET_TABLE=TABLE
+
+tMysqlRow.QUERY=QUERY
+tMysqlRow.SOURCE_CONN=CONNECTION
+
+tMysqlTableTransfer.QUERY=SOURCE_QUERY
+tMysqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
+tMysqlTableTransfer.SOURCE_TABLE=SOURCE_TABLE
+tMysqlTableTransfer.TARGET_CONN=CONNECTION_TARGET
+tMysqlTableTransfer.TARGET_TABLE=TARGET_TABLE
+tMysqlTableTransfer.USE_ALWAYS_CONN=true
+
+tOracleInput.QUERY=QUERY
+tOracleInput.SOURCE_CONN=CONNECTION
+
+tOracleMergeELT.TARGET_CONN=CONNECTION
+tOracleMergeELT.TARGET_TABLE=TARGET_TABLE
+tOracleMergeELT.USE_ALWAYS_CONN=true
+
+tOracleOutput.TARGET_CONN=CONNECTION
+tOracleOutput.TARGET_TABLE=TABLE
+
+tOracleRow.QUERY=QUERY
+tOracleRow.SOURCE_CONN=CONNECTION
+
+tOracleTableTransfer.QUERY=SOURCE_QUERY
+tOracleTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
+tOracleTableTransfer.TARGET_CONN=CONNECTION_TARGET
+tOracleTableTransfer.TARGET_TABLE=TARGET_TABLE
+tOracleTableTransfer.USE_ALWAYS_CONN=true
+
+tPostgresqlConnection.DBNAME=DBNAME
+tPostgresqlConnection.HOST=HOST
+tPostgresqlConnection.SCHEMA=SCHEMA_DB
+
+tPostgresqlInput.QUERY=QUERY
+tPostgresqlInput.SOURCE_CONN=CONNECTION
+
+tPostgresqlOutput.TARGET_CONN=CONNECTION
+tPostgresqlOutput.TARGET_TABLE=TABLE
+
+tPostgresqlRow.QUERY=QUERY
+tPostgresqlRow.SOURCE_CONN=CONNECTION
+
+tPostgresqlTableTransfer.QUERY=SOURCE_QUERY
+tPostgresqlTableTransfer.SOURCE_CONN=CONNECTION_SOURCE
+tPostgresqlTableTransfer.SOURCE_TABLE=SOURCE_TABLE
+tPostgresqlTableTransfer.TARGET_CONN=CONNECTION_TARGET
+tPostgresqlTableTransfer.TARGET_TABLE=TARGET_TABLE
+tPostgresqlTableTransfer.USE_ALWAYS_CONN=true
+
+tSAPHybrisQueryToImpexCSV.QUERY=QUERY
+tSAPHybrisQueryToImpexCSV.SOURCE_CONN=CONNECTION
+tSAPHybrisQueryToImpexCSV.USE_ALWAYS_CONN=true
+
+tSAPRFCConnection.HOST=SYSTEMID
+tSAPRFCConnection.SCHEMA=GROUPNAME
+
+tSAPRFCTableInput.SOURCE_CONN=CONNECTION
+tSAPRFCTableInput.SOURCE_TABLE=TABLE
+tSAPRFCTableInput.USE_ALWAYS_CONN=true
