Fix problem with default schema for tables

--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -111,6 +111,8 @@ tSAPHybrisQueryToImpexCSV.QUERY=QUERY
 tSAPHybrisQueryToImpexCSV.SOURCE_CONN=CONNECTION
 tSAPHybrisQueryToImpexCSV.USE_ALWAYS_CONN=true
 
+tSQLScriptParser.QUERY=SQL_SCRIPT
+
 tSAPRFCConnection.HOST=SYSTEMID
 tSAPRFCConnection.SCHEMA=GROUPNAME
 
