improvements in parsing jobs
SAP RFC tables host nam fixed
dummy tables excluded
Context filtered

--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -113,7 +113,7 @@ tSAPHybrisQueryToImpexCSV.USE_ALWAYS_CONN=true
 
 tSQLScriptParser.QUERY=SQL_SCRIPT
 
-tSAPRFCConnection.HOST=SYSTEMID
+tSAPRFCConnection.HOST=HOSTNAME
 tSAPRFCConnection.SCHEMA=GROUPNAME
 
 tSAPRFCTableInput.SOURCE_CONN=CONNECTION
