--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -114,7 +114,7 @@ tSAPHybrisQueryToImpexCSV.USE_ALWAYS_CONN=true
 tSQLScriptParser.QUERY=SQL_SCRIPT
 
 tSAPRFCConnection.HOST=HOSTNAME
-tSAPRFCConnection.SCHEMA=GROUPNAME
+tSAPRFCConnection.SCHEMA=SYSTEMID,GROUPNAME
 
 tSAPRFCTableInput.SOURCE_CONN=CONNECTION
 tSAPRFCTableInput.SOURCE_TABLE=TABLE
