Deal with table lists Handover context variables to child jobs Test added for table list Collect all embedded jobs

--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -2,12 +2,15 @@ tCreateTable.TARGET_CONN=CONNECTION
 
 tDB2Input.QUERY=QUERY
 tDB2Input.SOURCE_CONN=CONNECTION
+tDB2Input.TYPE=JDBC
 
 tDB2Output.TARGET_CONN=CONNECTION
 tDB2Output.TARGET_TABLE=TABLE
+tDB2Output.TYPE=JDBC
 
 tDB2Row.QUERY=QUERY
 tDB2Row.SOURCE_CONN=CONNECTION
+tDB2Row.TYPE=JDBC
 
 tDBConnection.DBNAME=DBNAME
 tDBConnection.HOST=HOST
