Fix complex table names

--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -117,7 +117,7 @@ tSAPHybrisQueryToImpexCSV.USE_ALWAYS_CONN=true
 tSQLScriptParser.QUERY=SQL_SCRIPT
 
 tSAPRFCConnection.HOST=HOSTNAME
-tSAPRFCConnection.SCHEMA=SYSTEMID,GROUPNAME
+# tSAPRFCConnection.SCHEMA=SYSTEMID,GROUPNAME
 
 tSAPRFCTableInput.SOURCE_CONN=CONNECTION
 tSAPRFCTableInput.SOURCE_TABLE=TABLE
