--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -1,4 +1,4 @@
-tCreateTable.TARGET_CONN=CONNECTION
+tCreateTable.TARGET_CONN=CONNECTION_MYSQL,CONNECTION_POSTGRES,CONNECTION_EXASOL
 
 tDB2Input.QUERY=QUERY
 tDB2Input.SOURCE_CONN=CONNECTION
