JDBC components with daikon properties implemented

--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -4,6 +4,12 @@ tDB2Input.QUERY=QUERY
 tDB2Input.SOURCE_CONN=CONNECTION
 tDB2Input.TYPE=JDBC
 
+tJDBCInput.QUERY=PROPERTIES$.sql.storedValue
+tJDBCInput.SOURCE_CONNECTION=PROPERTIES$.referencedComponent.componentInstanceId.storedValue
+tJDBCInput.HOST=PROPERTIES$.connection.jdbcUrl.storedValue
+
+tJDBCConnection.HOST=PROPERTIES$.connection.jdbcUrl.storedValue
+
 tDB2Output.TARGET_CONN=CONNECTION
 tDB2Output.TARGET_TABLE=TABLE
 tDB2Output.TYPE=JDBC
@@ -57,9 +63,13 @@ tMysqlConnection.HOST=HOST
 
 tMysqlInput.QUERY=QUERY
 tMysqlInput.SOURCE_CONN=CONNECTION
+tMysqlInput.DBNAME=DBNAME
+tMysqlInput.HOST=HOST
 
 tMysqlOutput.TARGET_CONN=CONNECTION
 tMysqlOutput.TARGET_TABLE=TABLE
+tMysqlOutput.DBNAME=DBNAME
+tMysqlOutput.HOST=HOST
 
 tMysqlRow.QUERY=QUERY
 tMysqlRow.SOURCE_CONN=CONNECTION
