New version of component JDBCInput implemented

--- a/src/main/resources/table-components.properties
+++ b/src/main/resources/table-components.properties
@@ -5,10 +5,16 @@ tDB2Input.SOURCE_CONN=CONNECTION
 tDB2Input.TYPE=JDBC
 
 tJDBCInput.QUERY=PROPERTIES$.sql.storedValue
-tJDBCInput.SOURCE_CONNECTION=PROPERTIES$.referencedComponent.componentInstanceId.storedValue
+tJDBCInput.SOURCE_CONN=PROPERTIES$.referencedComponent.componentInstanceId.storedValue
 tJDBCInput.HOST=PROPERTIES$.connection.jdbcUrl.storedValue
 
+JDBCInput.QUERY=configuration.dataSet.sqlQuery
+JDBCInput.SOURCE_CONN=CONNECTION
+JDBCInput.HOST=configuration.dataSet.dataStore.jdbcUrl
+
 tJDBCConnection.HOST=PROPERTIES$.connection.jdbcUrl.storedValue
+
+JDBCConnection.HOST=configuration.jdbcUrl
 
 tDB2Output.TARGET_CONN=CONNECTION
 tDB2Output.TARGET_TABLE=TABLE
