--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
 	<groupId>com.github.jlolling</groupId>
 	<artifactId>jlo-talend-analyse</artifactId>
 	<version>2.1</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<repositories>
 		<repository>
 			<id>jsqlparser-snapshots</id>
